# World

./: .gitignore  CMakeLists.txt
ans/: 4.f0
include/world/: common.h  fft.h
lib/arm64-v8a/: libfftw3f.la
lib/armeabi-v7a/: libfftw3f.la
lib/native/: libfftw3.la
lib/native/pkgconfig/: fftw3.pc
src/: cheaptrick.cpp  codec.cpp  common.cpp  dio.cpp  fft.cpp  matlabfunctions.cpp  stonemask.cpp  synthesis.cpp  synthesisrealtime.cpp
tools/: fftw_build.sh
